--- a/.github/workflows/secund.yml
+++ b/.github/workflows/secund.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           maven-version: 3.8.2
 
-      - name: Run regression
+      - name: Run ${{ github.event.inputs.chose-feature}}
         run: mvn clean test -Dsurefire.suiteXmlFiles=testNG/${{ github.event.inputs.chose-feature}}.xml
