--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,11 +1,8 @@
 name: Regression test
-
-
 on:
-  push:
-
+  [push,workflow_dispatch]
 jobs:
-  run-all-test:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,6 +14,9 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
+  run-all-tests:
+    runs-on: ubuntu-latest-16-cores
+    steps:
 
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
