--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -15,7 +15,7 @@ jobs:
           distribution: 'adopt'
 
   run-all-tests:
-    runs-on: ubuntu-latest-16-cores
+    runs-on: ubuntu-latest
     steps:
 
       - name: Set up Maven
