--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -18,6 +18,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'adopt'
+
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
         with:
