--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -1,11 +1,8 @@
 name: Regression test
-
-
 on:
-  push:
-
+  [push,workflow_dispatch]
 jobs:
-  run-all-test:
+  setup:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -17,6 +14,18 @@ jobs:
           java-version: 17
           distribution: 'adopt'
 
+  run-all-tests:
+    runs-on: ubuntu-latest
+    steps:
+
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          java-version: 17
+          distribution: 'adopt'
 
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
