--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -2,19 +2,8 @@ name: Regression test
 on:
   [push,workflow_dispatch]
 jobs:
-  setup:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Setup Java
-        uses: actions/setup-java@v3
-        with:
-          java-version: 17
-          distribution: 'adopt'
-
   run-all-tests:
+
     runs-on: ubuntu-latest
     steps:
 
@@ -26,7 +15,7 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'
-
+          
       - name: Set up Maven
         uses: stCarolas/setup-maven@v4.5
         with:
@@ -34,3 +23,6 @@ jobs:
 
       - name: Run regression
         run: mvn clean test -Dsurefire.suiteXmlFiles=regresion.xml
+
+      - name: Report
+        run: {{toJSON(github)}}
