--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -23,3 +23,6 @@
 
         - name: Run regression
           run: mvn clean test -Dsurefire.suiteXmlFiles=regresion.xml
+
+        - name: This is just test
+          run: echo "This is a test for merging in to main"
