--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,6 +1,8 @@
   name: check_develop_before_merge_on_main
   on:
     pull_request:
+      types:
+        - opened
       branches:
         - main
   jobs:
