--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -1,6 +1,8 @@
   name: check_develop_before_merge_on_main
   on:
     pull_request:
+      types:
+        - opened
       branches:
         - main
   jobs:
@@ -23,3 +25,8 @@
 
         - name: Run regression
           run: mvn clean test -Dsurefire.suiteXmlFiles=regresion.xml
+
+
+        - name: This is just test
+          run: echo "This is a test for merging in to main"
+
